# telemetry-django-obd

./: MANIFEST.in  README.md  setup.cfg
telemetry_django_obd/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
telemetry_django_obd/management/commands/: ecu_command_stats.py  load_obd_data_files.py
