[check-manifest]
ignore =
    *.sublime-project
    .git*
    .vscode/*
    manage.py

[metadata]
name = telemetry-django-obd
author = Larry Pearson
author_email = not-an-email-address@gmail.com
version = 0.2
description = Django application/module including OBD data loader, admin interface and REST API.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/thatlarrypearson?tab=repositories
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.6
setup_requires = 
    setuptools >= 38.3.0
install_requires =
    Django>=3.0
packages = find:
